[project]
name = "python-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.13.1",
]

[tool.pytest.ini_options]
addopts = ["-vs", "--html=report.html"]

[tool.ruff.lint]
select = [
     "E4",
    "E7",
    "E9", 
    "F", # pyflakes
    "A", # flake8-builtins
    "ARG", # flake8-unused-arguments
    "ANN", # flake8-annotation
    "B", # flake-bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "COM", # flake8-commas
    "D", # pydocstyle
    "E",
    "EM", # flake8-errmsg
    "FLY", # flynt
    "I", # isort
    "ISC", # flake8-implicit-str-concat
    "N", # pep 8-naming
    "PERF", # perflint
    "PIE", # flake8-pie
    "PT", # flake8-pytest-style
    "PL", # pylint
    "RSE", # flake8-raise
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
    "UP", # pyupgrade
    "TRY", # tryceratops
]

ignore = [
    "E501", # line to long
    "PLR0913" # Too many arguments in function difinition
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

"test_*.py" = [
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
]

"*.ipynb" = []

"**/{tests,docs,toolsl}/*" = ["E402"]
